# portfolio

./: .gitignore  CHANGES_SUMMARY.md  CONTRIBUTING.md  FOLDER_STRUCTURE.md  JUPYTER_SETUP.md  METHODOLOGY_SHOWCASE.md  Makefile  README.md  SETUP.md  STANDARDIZATION_REPORT.md  TECHNICAL_CAPABILITIES.md  new_notebook.sh  pyproject.toml  requirements.txt
coursework/google-advanced-data-analytics/content_moderation_claims_classification/: CONTRIBUTING.md  LICENSE  README.md
coursework/google-advanced-data-analytics/employee_attrition_analysis/: .gitignore  CASE_STUDY_OVERVIEW.md  README.md  repo-layout.md
coursework/google-business-intelligence/call_center_customer_satisfaction/: .gitignore  README.md
scripts/: README.md  diff_files.py  diff_menu.sh  export_figures.py  export_figures_menu.sh  export_notebooks.py  export_notebooks_menu.sh  folder_mapper.sh  generate_data_dictionary.py  insights_generator.py  jn  jupyter_auto_close.py  jupyter_auto_close.py.backup  jupyter_tab_manager.sh  make_lineage_data_dictionary.py  new_notebook.sh  run_all.sh  setup_global_access.sh
scripts/cleaning/: 2023_stackoverflow_bq_schema_FIXED.json  HOW_TO_RUN_PASS1.md  README.md  corruption_check.py  data_inventory_master_pass1.py  data_inventory_pipeline.md  data_summarizer_gemini.py  generate_cleaned_datasets.py  generate_column_intersection.py  generate_comprehensive_analysis.py  run_data_inventory.sh
showcase/: README.md
src/: README.md  __init__.py  bootstrap.py  data_cleaning.py  model_eval.py  model_pipeline.py  paths.py  viz_access.py  viz_helpers.py
(+114 files in other folders)
