# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-src"
version = "0.1.0"
description = "Centralized helpers for portfolio notebooks (bootstrap, paths, viz)"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["src"]  # we are intentionally packaging the module named 'src'

